# ovo-local-llm

./: README.ko.md  README.md  REMAINING_WORK.md  next_session_handover.md  next_session_handover.me  package-lock.json  package.json
docs/: ARCHITECTURE.md
sidecar/: pyproject.toml
sidecar/scripts/: dev.sh
sidecar/src/ovo_sidecar/: config.py  hf_downloader.py  hf_scanner.py  main.py  mlx_runner.py  mlx_vlm_runner.py
sidecar/src/ovo_sidecar/api/: blending.py  ollama.py  openai.py  ovo.py
sidecar/src/ovo_sidecar/blending/: blend_runner.py  models.py
sidecar/src/ovo_sidecar/finetune/: lora_trainer.py
sidecar/src/ovo_sidecar/parsing/: dispatcher.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  003_wiki_tier.sql
src-tauri/src/: lib.rs  mcp.rs  sidecar.rs
src/components/: AppShell.tsx  ChatInput.tsx  ChatMessageBubble.tsx  CollapsibleSection.tsx  ContextIndicator.tsx  ErrorBoundary.tsx  FitOverview.tsx  McpServersSection.tsx  ModelProfileSelector.tsx  Owl.tsx  ProjectContextSection.tsx  RecentsPanel.tsx  SessionItem.tsx  Sidebar.tsx  SidecarIndicator.tsx  SystemStatusPopover.tsx  Toast.tsx
src/db/: index.ts  model_overrides.ts  sessions.ts  wiki.ts
src/lib/: api.ts  blending.ts  compact.ts  fileExtraction.ts  mcp_presets.ts  slashCommands.ts  toolUse.ts
src/locales/: en.json  ko.json
src/panes/: AboutPane.tsx  BlendingPane.tsx  ChatPane.tsx  CodePane.tsx  ImagePane.tsx  ModelsPane.tsx  PingpongPane.tsx  SettingsPane.tsx  WikiPane.tsx
src/store/: chat.ts  chat_settings.ts  model_overrides.ts  model_profiles.ts  project_context.ts  sessions.ts  toasts.ts
src/types/: ovo.ts
