[package]
name = "ovo"
version = "0.0.6"
description = "OVO — Local MLX LLM runtime with desktop owl mascot"
authors = ["OVO"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ovo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1.0"
log = "0.4"
dirs = "5.0"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.9.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
